Included old version links

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Isaac Attuah | AI/ML Customer Engineer</title>
+    <title>Isaac Attuah </title>
     <link rel="stylesheet" href="assets/css/styles.css">
     <link rel="icon" href="images/main-favicon.ico" type="image/x-icon">
 	<!-- Global site tag (gtag.js) - Google Analytics -->
@@ -180,6 +180,16 @@
     <!-- Footer -->
     <footer>
         <div class="container">
+            <p>&copy; <span id="current-year"></span> Isaac Attuah</p>
+            <p class="version-info">
+                Previous iterations of this site: 
+                <a href="version_zero.html" target="_blank">v0</a> &middot;
+                <a href="version_one.html" target="_blank">v1</a> &middot;
+                <span class="current">v2</span>
+            </p>
+        </div>
+    </footer>
+
     <!-- JavaScript for smooth scrolling and current year -->
     <script>
         // Set current year in footer
