--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
 
 		gtag('config', 'UA-155985859-1');
 	</script>
+    <script src="assets/js/theme.js" defer></script>
 </head>
 <body>
     <!-- Navigation -->
@@ -29,6 +30,11 @@
                 <li><a href="#projects">Projects</a></li>
                 <li><a href="#writing">Writing</a></li>
                 <li><a href="#links">Connect</a></li>
+                <li>
+                    <button id="theme-toggle" class="theme-toggle" aria-label="Toggle dark mode">
+                        <i class="fas fa-moon"></i>
+                    </button>
+                </li>
             </ul>
         </div>
     </nav>
